--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@auth0/angular-jwt": "^5.1.0",
     "@faker-js/faker": "^7.6.0",
     "bootstrap": "^5.2.3",
     "chart.js": "^2.9.4",
